--- a/index.html
+++ b/index.html
@@ -1,9 +1,100 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Title</title>
+    <meta charset="utf-8" />
+    <meta name="description" content="to find the Area of Trapezoid" />
+    <meta name="keywords" content="mths, ics2o" />
+    <meta name="author" content="Osamah Hasan" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
+    <link rel="manifest" href="site.webmanifest" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-purple.min.css" />
+    <link rel="stylesheet" href="./css/style.css" />
+    <title>Find the Area of Trapezoid</title>
   </head>
   <body>
-    <p>Paragraph</p>
+    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+    <script src="./js/script.js"></script>
+    <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
+      <header class="mdl-layout__header">
+        <div class="mdl-layout__header-row">
+          <span class="mdl-layout-title">Area of the Trapezoid</span>
+        </div>
+      </header>
+      <main class="mdl-layout__content">
+        <table>
+          <tr>
+              <img src="./images/trapezoid.svg" alt="Tringle" />
+            <th>
+              <h2>Formulas</h2>
+              <h3>A = [(A + B) / 2] * H</h3>
+            </th>
+          </tr>
+        </table>
+        <h4>Please enter the info :</h4>
+        <!-- Numeric Textfield -->
+        <form action="#">
+          <p>{A}</p>
+          <div class="mdl-textfield mdl-js-textfield">
+            <input
+              class="mdl-textfield__input"
+              type="text"
+              pattern="-?[0-9]*(\.[0-9]+)?"
+              id="A of Trapezoid"
+            />
+            <label class="mdl-textfield__label" for="width-of-rectangle">A....</label>
+            <span class="mdl-textfield__error">Input is not a number!</span>
+          </div>
+          mm
+        </form>
+        <br />
+        <!-- Numeric Textfield -->
+        <form action="#">
+          <p>{B}</p>
+          <div class="mdl-textfield mdl-js-textfield">
+            <input
+              class="mdl-textfield__input"
+              type="text"
+              pattern="-?[0-9]*(\.[0-9]+)?"
+              id="B of Trapezoid"
+            />
+            <label class="mdl-textfield__label" for="width-of-rectangle">B....</label>
+            <span class="mdl-textfield__error">Input is not a number!</span>
+          </div>
+          mm
+        </form>
+        <br />
+        <!-- Simple Textfield -->
+        <form action="#">
+          <p>Hight</p>
+          <div class="mdl-textfield mdl-js-textfield">
+            <input
+              class="mdl-textfield__input"
+              type="text"
+              pattern="-?[0-9]*(\.[0-9]+)?"
+              id="Hight of Trapezoid"
+            />
+            <label class="mdl-textfield__label" for="length-of-rectangle">hight.....</label>
+            <span class="mdl-textfield__error">Input is not a number!</span>
+          </div>
+          mm
+        </form>
+        <!-- Raised button with ripple -->
+        <button
+          class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"
+          onclick="calculate()"
+        >
+          Calculate
+        </button>
+        <br />
+        <br />
+        <div id="answers">
+          <div id="area"></div>
+        </div>
+      </main>
+    </div>
   </body>
 </html>
